--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       id="retell-widget"
       src="https://dashboard.retellai.com/retell-widget.js"
       type="module"
+      data-public-key="public_key_c894825223963729a1ba5"
       data-agent-id="agent_54029e82c9c1dc4e6fdb7fdb60"
       data-show-ai-popup="true"
       data-show-ai-popup-time="5"
