--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       data-show-ai-popup="true"
       data-show-ai-popup-time="5"
       data-auto-open="false"
+      data-color="#0066CC"
+      data-title="Chat with us"
+      data-popup-message="Have questions? We're here to help!"
     ></script>
   </head>
   <body>
