--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>{{BUSINESS_NAME}} — Friendly dentist in {{CITY}}</title>
+    <title>Dental Care</title>
     <meta name="description" content="Compassionate dental care in {{CITY}}. Same-week appointments, modern treatments, and a team that makes you comfortable." />
     <link rel="canonical" href="https://yourdomain.com" />
     
